force-app/main/default/objects/Product_Catalogue__c/Product_Catalogue__c.object-meta.xml
<CustomObject>
    <label>Product Catalogue</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>