force-app/main/default/objects/Product_Catalogue__c/fields/Applicable_Role__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Role__c</fullName>
    <label>Applicable Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Either</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>