force-app/main/default/objects/Product_Catalogue__c/fields/Auto_Add_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Auto_Add_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Add Trigger</label>
    <type>Checkbox</type>
</CustomField>