force-app/main/default/objects/Product_Catalogue__c/fields/Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Default_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Default Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>