force-app/main/default/objects/Product_Catalogue__c/fields/Dependency_Group__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Group__c</fullName>
    <label>Dependency Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>