force-app/main/default/objects/Product_Catalogue__c/fields/Has_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Has_Dependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Dependencies</label>
    <type>Checkbox</type>
</CustomField>