force-app/main/default/objects/Product_Catalogue__c/fields/Price_Basis__c.field-meta.xml
<CustomField>
    <fullName>Price_Basis__c</fullName>
    <label>Price Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Per Unit</fullName>
            </value>
            <value>
                <fullName>Per Item</fullName>
            </value>
            <value>
                <fullName>Percentage of Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>