force-app/main/default/objects/Product_Catalogue__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Matter</fullName>
            </value>
            <value>
                <fullName>Per Document</fullName>
            </value>
            <value>
                <fullName>Per Search</fullName>
            </value>
            <value>
                <fullName>Per Property</fullName>
            </value>
            <value>
                <fullName>Per Party</fullName>
            </value>
            <value>
                <fullName>Per Hour</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Per Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>