force-app/main/default/objects/Product_Catalogue__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <label>VAT Rate (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>